--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -9,8 +9,15 @@
 </head>
 
 <body>
-    <h1>hello world</h1>
-    <h2>{{ context }}</h2>
+    <h1>index</h1>
+    <h2>list of posts</h2>
+    <ul>
+        {% for recipe in recipes %}
+        <li>
+            {{recipe}}
+        </li>
+        {% endfor %}
+    </ul>
     <a href="{% url 'posts:index' %}">home</a>
     <a href="{% url 'matkonim2-posts:index' %}">home2</a>
 </body>
