--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matkonim Posts</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    
 </head>
 
 <body>
