--- a/posts/templates/posts/header.html
+++ b/posts/templates/posts/header.html
@@ -23,14 +23,14 @@
             <div class="clear"></div>
         </div>
     </div>
-    <div class="box-slider">
+    <!-- <div class="box-slider">
         <div class="flexslider">
             <ul class="slides">
                 <li> <img alt="" src="{% static 'images/slide-1.jpg' %}"></li>
                 <li> <img alt="" src="{% static 'images/slide-2.jpg' %}"></li>
             </ul>
         </div>
-    </div>
+    </div> -->
     <div class="box-slogan">
         <h3>Welcome to Gourmet cooking school!</h3>
         <p> At vero eos et <a href="#" class="link-1">accusam et</a> justo duo dolores et ea rebum. Stet clita kasd
