--- a/posts/templates/posts/head.html
+++ b/posts/templates/posts/head.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="{% static 'css/reset.css' %}" type="text/css" media="screen">
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="screen">
     <link rel="stylesheet" href="{% static 'css/grid.css' %}" type="text/css" media="screen">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'css/flexslider.css' %}" type="text/css" media="screen">
     <!--js-->
     <script type="text/javascript" src="{% static 'js/jquery-1.7.1.min.js' %}"></script>
