--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -2,82 +2,56 @@
 {% load static %}
 {% block content %}
 <section id="content">
-     <div class="ic">More Website Templates @ TemplateMonster.com. December03, 2012!</div>
-     <div class="border-horiz"></div>
-     <div class="container_12 row-1">
-          <article class="grid_4 thumbnail-1">
-               <h3><span>Vegan</span> cookings </h3>
-               <figure class="box-img"><img src="{% static 'images/page1-img1.jpg' %}" alt="" /></figure>
-               <p><a href="http://blog.templatemonster.com/free-website-templates/" class="link-1">Click here</a> for
-                    more info
-                    about this free template created by TemplateMonster.com team.</p>
-               <a href="http://blog.templatemonster.com/free-website-templates/" class="btn">Read more</a>
-          </article>
-          <article class="grid_4 thumbnail-1">
-               <h3><span>grill</span> cookings </h3>
-               <figure class="box-img"><img src="{% static 'images/page1-img2.jpg' %} " alt="" /></figure>
-               <p>This web template is optimized for 1280X1024 screen resolution. It is also XHTML &amp; CSS valid.</p>
-               <a href="http://blog.templatemonster.com/free-website-templates/" class="btn">Read more</a>
-          </article>
-          <article class="grid_4 thumbnail-1">
-               <h3><span>dessert</span> cookings </h3>
-               <figure class="box-img"><img src="{% static 'images/page1-img3.jpg' %} " alt="" /></figure>
-               <p>The PSD source files of this template are available for free for the registered members.</p>
-               <a href="http://blog.templatemonster.com/free-website-templates/" class="btn">Read more</a>
-          </article>
+  <div class="ic">More Website Templates @ TemplateMonster.com. December03, 2012!</div>
+  <div class="border-horiz"></div>
+  <div class="container_12">
+    <article class="side-bar extra1">
+      <h3><span>aBOUT</span>oUR sCHOOL</h3>
+      <figure class="box-img img-indent1"><img src="{% static 'images/page5-img1.jpg' %}" alt="" /></figure>
+      <div class="inner-1"> <a href="#" class="link-1">At vero eos et accusam et justo duo dolores et ea rebum. </a>
+        <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit consetetur sadipscing elitr, sed
+          diam nonumy eirmod tempor invidunt ut labore et dolore.</p>
+        <p>magna aliquyam erat, accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+          sanctus est Lorem ipsum dolor sit consetetur sadipscing elitr.</p>
+        <a href="#" class="btn">Read more</a>
+      </div>
+    </article>
+    <article class="grid_8">
+      <h3>Our Chefs</h3>
+      <ul class="list-recipes extra">
+        <li>
+          <figure class="box-img"><img src="{% static 'images/page5-img2.jpg' %}" alt="" /></figure>
+          <div class="overflow">
+            <h4>Danis bowing</h4>
+            <p>sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+              vero eos et accusam. et justo duo dolores et ea rebum.</p>
+            <a href="#" class="btn">Read more</a>
+          </div>
           <div class="clear"></div>
-     </div>
-     <div class="border-horiz"></div>
-     <div class="container_12">
-          <article class="grid_4">
-               <h3>popular</h3>
-               <ul class="list-popular">
-                    <li> <a href="#">Lighter cooking</a>
-                         <p>At vero eos et accusam etusto dolores et ea rebum.</p>
-                    </li>
-                    <li> <a href="#">Pudding</a>
-                         <p>Duis autem vel eum iriure dolor in hendrerit.</p>
-                    </li>
-                    <li> <a href="#">Black bean salsa</a>
-                         <p>Molestie consequat, vel illum dolore eu feugiat.</p>
-                    </li>
-                    <li> <a href="#">Asparagus</a>
-                         <p>Vulputate velit esse molestie consequat.</p>
-                    </li>
-               </ul>
-          </article>
-          <article class="grid_8">
-               <h3>Professional programs</h3>
-               <blockquote class="quote-1"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                    eirmod
-                    tempor invidunt ut labore et dolore magna aliquym erat, sed diam voluptua At vero eos. </blockquote>
-               <div class="name-author">- James Willis</div>
-               <ul class="list-dropcap">
-                    <li>
-                         <div class="wrapper">
-                              <div class="dropcap">A</div>
-                              <a href="#">Lorpsum dolor</a>
-                         </div>
-                         <figure class="box-img"><img src="{% static 'images/page1-img4.jpg' %} " alt="" /></figure>
-                    </li>
-                    <li>
-                         <div class="wrapper">
-                              <div class="dropcap">B</div>
-                              <a href="#">consetet
-                                   sadiping </a>
-                         </div>
-                         <figure class="box-img"><img src="{% static 'images/page1-img5.jpg' %} " alt="" /></figure>
-                    </li>
-                    <li>
-                         <div class="wrapper">
-                              <div class="dropcap">C</div>
-                              <a href="#">diam nonumy </a>
-                         </div>
-                         <figure class="box-img"><img src="{% static 'images/page1-img6.jpg' %} " alt="" /></figure>
-                    </li>
-               </ul>
-          </article>
+        </li>
+        <li>
+          <figure class="box-img"><img src="{% static 'images/page5-img3.jpg' %}" alt="" /></figure>
+          <div class="overflow">
+            <h4>Sam Dowson</h4>
+            <p>sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+              vero eos et accusam. et justo duo dolores et ea rebum.</p>
+            <a href="#" class="btn">Read more</a>
+          </div>
           <div class="clear"></div>
-     </div>
+        </li>
+        <li>
+          <figure class="box-img"><img src="{% static 'images/page5-img4.jpg' %}" alt="" /></figure>
+          <div class="overflow">
+            <h4>Jane smart</h4>
+            <p>sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+              vero eos et accusam. et justo duo dolores et ea rebum.</p>
+            <a href="#" class="btn">Read more</a>
+          </div>
+          <div class="clear"></div>
+        </li>
+      </ul>
+    </article>
+    <div class="clear"></div>
+  </div>
 </section>
 {% endblock %}
