--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <section id="content">
-  <div class="ic">More Website Templates @ TemplateMonster.com. December03, 2012!</div>
+  <div class="ic">Eduard Khiaev</div>
   <div class="border-horiz"></div>
   <div class="container_12">
     <article class="side-bar extra1">
@@ -17,7 +17,7 @@
       </div>
     </article>
     <article class="grid_8">
-      <h3>Our Chefs</h3>
+      <h3>מתכונים</h3>
       <ul class="list-recipes extra">
         <li>
           <figure class="box-img"><img src="{% static 'images/page5-img2.jpg' %}" alt="" /></figure>
