add preface model and template

--- a/posts/templates/posts/header.html
+++ b/posts/templates/posts/header.html
@@ -24,7 +24,7 @@
         </div>
     </div> -->
     <div class="box-slogan">
-        <h3>Welcome to Gourmet cooking school!</h3>
+        <h3>ברוכים הבאים לאתר המתכונים של אדוארד</h3>
         <p> At vero eos et <a href="#" class="link-1">accusam et</a> justo duo dolores et ea rebum. Stet clita kasd
             gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet lorem ipsum dolor sit amet. </p>
     </div>
