--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -24,8 +24,7 @@
           <figure class="box-img"><img src="{% static 'images/page5-img4.jpg' %}" alt="" /></figure>
           <div class="overflow">
             <h4><a href="{{recipe.get_absolute_url}}">{{recipe}}</a></h4>
-            <p>sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-              vero eos et accusam. et justo duo dolores et ea rebum.</p>
+            <p>{{recipe.preface}}</p>
             <a href="{{recipe.get_absolute_url}}" class="btn">למתכון</a>
           </div>
           <div class="clear"></div>
