image in index list

--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -6,7 +6,7 @@
   <div class="border-horiz"></div>
   <div class="container_12">
     <article class="side-bar extra1">
-      <h3><span>aBOUT</span>oUR sCHOOL</h3>
+      <h3><span>אדוארד</span>חיאייב</h3>
       <figure class="box-img img-indent1"><img src="{% static 'images/page5-img1.jpg' %}" alt="" /></figure>
       <div class="inner-1"> <a href="#" class="link-1">At vero eos et accusam et justo duo dolores et ea rebum. </a>
         <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit consetetur sadipscing elitr, sed
@@ -21,7 +21,7 @@
       <ul class="list-recipes extra">
         {% for recipe in recipes %}
         <li>
-          <figure class="box-img"><img src="{% static 'images/page5-img4.jpg' %}" alt="" /></figure>
+          <figure class="recipe-image"><img src="{{recipe.image.url}}" alt="" /></figure>
           <div class="overflow">
             <h4><a href="{{recipe.get_absolute_url}}">{{recipe}}</a></h4>
             <p>{{recipe.preface}}</p>
